Chore: more idiomatic java 17, remove "i" prefix  (#1916)